--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <body>
     <table cellspacing="30">
       <!-- img =imgage, src =source, alt = alternative text when picture not rendered-->
-      <td><img src="image/Quang.png" width="250" height="250" alt="Quang profile picture"></td>
+      <td><img src="Quang.png" width="250" height="250" alt="Quang profile picture"></td>
       <td>
         <h1>Quang Nhut Truong</h1>
         <!-- i changes style = italic = kursiv,em emphasizes the word(s) & make it italic  -->
