--- a/contact-me.html
+++ b/contact-me.html
@@ -15,11 +15,11 @@
     <!--action= what action will be taken when submiting, enctype= encrype type to plain text (from character set utf-9) -->
     <form action="mailto:tqnloptgv5a@gmail.com" method="post" enctype="text/plain">
       <label>Your Name:</label>
-      <input type="text" name="Your Name" value=""><br>
+      <input type="text" placeholder="Name" name="Your Name" value=""><br>
       <label>Your Email:</label>
-      <input type="email" name="Your Email" value=""><br>
+      <input type="email" placeholder="Email" name="Your Email" value=""><br>
       <label>Your Message:</label><br>
-      <textarea name="Your Message" rows="10" cols="30"></textarea><br>
+      <textarea name="Your Message" placeholder="Type here..." rows="10" cols="30"></textarea><br>
       <input type="submit">
     </form>
   </body>
