--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <div class="middle-container">
     <div id="about-me" class="profile">
-      <img class="quang-foto" src="images/Quang.png" alt="quang-foto">
+      <img class="quang-foto" src="images/quang.png" alt="quang-foto">
       <h2>Hello.</h2>
       <p>What kind of world do you want to live in?</p>
       <p>I envision a world in which all of us wake up motivated everyday and use our talents to make our individual contribution to society. Studying psychology helps me learn about vertical human development and understand how to unlock human potential as well as how to bring out the best in everyone.</p>
