--- a/index.html
+++ b/index.html
@@ -35,7 +35,9 @@
       <p>I envision a world in which all of us wake up motivated everyday and use our talents to make our individual contribution to society. Studying psychology helps me learn about vertical human development and understand how to unlock human potential as well as how to bring out the best in everyone.</p>
       <p>In my free time, I enjoy talking to people and discovering new perspectives. At times, you will also find me in water swimming like a fish or in the kitchen trying out new recipes.</p>
     </div>
+    <div class="spacing"></div>
     <hr>
+    <div class="spacing"></div>
     <div id="my-skills" class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row clearfix">
@@ -83,7 +85,9 @@
 -->
 
     </div>
+    <div class="spacing"></div>
     <hr>
+    <div class="spacing"></div>
     <div id="contact" class="contact-me">
       <h2>Get In Touch</h2>
       <h3>Lorem ipsum dolor sit amet, non elit.</h3>
