--- a/index.html
+++ b/index.html
@@ -97,10 +97,10 @@
   </div>
 
   <div class="bottom-container">
-    <img class="linkedin-icon" href="https://www.linkedin.com/quangnhuttruong" src="images/linkedin-icon.png" alt="LinkedIn">
+    <img class="linkedin-icon" src="images/linkedin-icon.png" alt="LinkedIn">
     <a class="footer-link" href="https://www.linkedin.com/quangnhuttruong" target="_blank">LinkedIn</a>
     <img class="facebook-icon" src="images/facebook-icon.png" alt="Facebook">
-    <a class="footer-link" href="https://facebook.com/quangnhut.truong.de" target="_blank">Facebook</a>
+    <a class="footer-link" href="https://facebook.com" target="_blank">Facebook</a>
     <img class="website-icon" src="images/website-icon.png" alt="Website">
     <a class="footer-link" href="https://quangtru.github.io/cv" target="_blank">Website</a>
     <a class="footer-link" href="credit.html" target="_blank">Credit</a>
